category finish and start note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@ Service and Privacy Policy.</string>
     <string name="deatails_design"></string>
     <string name="app_w">Apparently we had reached a great height in  \n  the atmosphere, for the sky was a dead \n  black, and the stars had ceased.</string>
     <string name="date">March 20 , 2018 15:35</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
